--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,6 +13,7 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -20,6 +21,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true;
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.konfus_app"
         // You can update the following values to match your application needs.
@@ -42,3 +44,12 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    // Add the desugaring library
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+
+    // Include other dependencies as needed
+    // implementation 'com.example:your-other-dependency:version'
+}
+
