--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,8 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
   rxdart: ^0.28.0
-  flutter_native_timezone: ^2.0.0
-  background_fetch: ^1.0.0
+  flutter_timezone: ^2.0.0
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
