--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   rxdart: ^0.28.0
   flutter_timezone: ^2.0.0
   permission_handler: ^10.0.0
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
